update fix forclose app

--- a/android_app/gradle.properties
+++ b/android_app/gradle.properties
@@ -1,3 +1,8 @@
 android.useAndroidX=true
 android.enableJetifier=true
 android.suppressUnsupportedCompileSdk=34
+
+RELEASE_STORE_FILE=../redrak.keystore
+RELEASE_STORE_PASSWORD=123456
+RELEASE_KEY_ALIAS=redrak
+RELEASE_KEY_PASSWORD=123456
