--- a/android_app/app/build.gradle
+++ b/android_app/app/build.gradle
@@ -16,10 +16,12 @@ android {
 
     signingConfigs {
         release {
-            storeFile file("../redrak.keystore")
-            storePassword "123456"
-            keyAlias "redrak"
-            keyPassword "123456"
+            if (project.hasProperty('RELEASE_STORE_FILE')) {
+                storeFile file(RELEASE_STORE_FILE)
+                storePassword RELEASE_STORE_PASSWORD
+                keyAlias RELEASE_KEY_ALIAS
+                keyPassword RELEASE_KEY_PASSWORD
+            }
         }
     }
 
@@ -38,16 +40,16 @@ android {
 }
 
 dependencies {
-    // ANDROIDX WAJIB
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'androidx.annotation:annotation:1.7.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.android.material:material:1.12.0'
-
-    // KOTLIN STDLIB (dibutuhkan oleh okio)
+    
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.9.10"
-
-    // OKHTTP FIX
+    
     implementation 'com.squareup.okhttp3:okhttp:4.12.0'
     implementation 'com.squareup.okio:okio:3.4.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.12.0'
+
+    implementation 'io.coil-kt:coil:2.5.0'
 }
